<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/fragment_note_taking_buttons"
        android:background="@color/colorPrimary">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:padding="10dp">

            <Button
                android:id="@+id/fragment_note_taking_save_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/save_button"
                android:padding="8dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:textColor="@color/textColorPrimary"/>

        </FrameLayout>



        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:padding="10dp">

            <Button
                android:id="@+id/fragment_note_taking_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cancel_button"
                android:padding="8dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:textColor="@color/textColorPrimary"/>

        </FrameLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/fragment_note_taking_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_description"
        android:layout_below="@+id/fragment_note_taking_buttons"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/fragment_note_taking_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/description"
        android:textSize="24sp"
        android:layout_below="@+id/fragment_note_taking_title_text_view"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/fragment_note_taking_delete_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:layout_gravity="center"
            android:text="@string/delete_button"
            android:background="@color/colorPrimary"
            android:textColor="@color/textColorPrimary"
            />

    </FrameLayout>
</RelativeLayout>